--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,34 @@
-html {
-  margin: 0;
-}
 
-.App {
+
+.app {
   text-align: center;
   
+}
+.app_logo {
+  width: 10%;
+  height: auto;
+}
+
+.app_form {
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
+  background-color: #e9e9eb;
+  width: 90%;
+  margin: 20px;
+}
+
+.app_formControl {
+  display: flex !important;
+  flex-direction: row !important;
+}
+
+.app_input {
+  flex: 1;
+}
+
+.app_iconButton {
+  flex: 0;
 }
 
